contributed projects show up in gray in profile page

--- a/index.yaml
+++ b/index.yaml
@@ -19,3 +19,9 @@ indexes:
   properties:
   - name: owner
   - name: created_time
+
+- kind: Project
+  properties:
+  - name: owner
+  - name: created_time
+    direction: desc
